crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-multi_embeddings_megascience_vector_search_sql_projection_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, question, subject, trunc(score, 3) as score FROM vector_search(qs, 'second', answer) order by score desc, id LIMIT 4"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                                                                                                                                  |
|               |   Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, vector_search(qs, Utf8("second"), answer).question, vector_search(qs, Utf8("second"), answer).subject, trunc(vector_search(qs, Utf8("second"), answer).score, Int64(3)) AS score      |
|               |     TableScan: vector_search(qs, Utf8("second"), answer) projection=[answer, id, question, score, subject]                                                                                                                                                                                          |
| physical_plan | SortPreservingMergeExec: [score@4 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                                                               |
|               |   SortExec: TopK(fetch=4), expr=[score@4 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                   |
|               |     ProjectionExec: expr=[id@0 as id, answer@2 as answer, question@3 as question, subject@4 as subject, trunc(score@1, 3) as score]                                                                                                                                                                 |
|               |       HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, score@1, answer@2, question@4, subject@5]                                                                                                                             |
|               |         CoalescePartitionsExec                                                                                                                                                                                                                                                                      |
|               |           ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as score]                                                                                                                                                                                                                |
|               |             CooperativeExec                                                                                                                                                                                                                                                                         |
|               |               RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                  |
|               |                 BytesProcessedExec                                                                                                                                                                                                                                                                  |
|               |                   CooperativeExec                                                                                                                                                                                                                                                                   |
|               |                     S3VectorsQueryExec (spice-ci-tests-s3-vectors/duckdb-dataset-multi-embeddings-4): limit=100                                                                                                                                                                                     |
|               |         SchemaCastScanExec                                                                                                                                                                                                                                                                          |
|               |           CooperativeExec                                                                                                                                                                                                                                                                           |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                    |
|               |               BytesProcessedExec                                                                                                                                                                                                                                                                    |
|               |                 CooperativeExec                                                                                                                                                                                                                                                                     |
|               |                   VirtualExecutionPlan name=duckdb compute_context=:memory: initial_sql=SELECT "base_table"."answer", "base_table"."id", "base_table"."question", "base_table"."subject" FROM "base_table" rewritten_sql=SELECT "qs"."answer", "qs"."id", "qs"."question", "qs"."subject" FROM "qs" |
|               |                                                                                                                                                                                                                                                                                                     |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
