crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-multi_text_column_megascience_vector_search_sql_filtered_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer) WHERE subject != 'math' ORDER BY _score DESC, id LIMIT 4"
---
Could not prepare EXPLAIN plan. SQL error: "HTTP error: 400 Bad Request - Failed to execute query: Error during planning: Table 'spice.public.qs' does not have an embedding index."
