crates/runtime/tests/search/snapshots/integration_models__search__duckdb-s3_vectors-dataset-multi_text_column_megascience_vector_search_sql_random.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by score desc LIMIT 4"
snapshot_kind: text
---
"HTTP error: 400 Bad Request - Failed to execute query: Error during planning: Table 'spice.public.qs' does not have an embedding index."
